# marketplace

./: .gitignore  README.md
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_add_ratings.py  0b80bece37b9_add_user_saved_listings.py  166d7c5261d2_add_notifications_and_threads.py  420861887b1b_.py  42e84b1c7e20_create_users_and_otp_codes_tables.py  9692a1a27c8f_create_listings_table.py  b1fa324e80eb_.py  b2c6114c827f_.py
apps/api/app/: main.py
apps/api/app/core/: config.py  dependencies.py  r2.py  security.py
apps/api/app/db/: base.py
apps/api/app/models/: listing.py  notification.py  otp.py  rating.py  saved_listing.py  user.py
apps/api/app/routers/: auth.py  listings.py  notifications.py  ratings.py  uploads.py
apps/web/: components.json  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/auth/: page.tsx
apps/web/app/my-listings/: page.tsx
apps/web/app/notifications/: page.tsx
apps/web/app/post/: page.tsx
apps/web/app/profile/: page.tsx
apps/web/app/saved/: page.tsx
apps/web/components/: category-filters.tsx  category-grid.tsx  category-section.tsx  footer.tsx  hero.tsx  listing-card.tsx  listing-gallery.tsx  listing-list-card.tsx  navbar.tsx  recent-listings.tsx  save-button.tsx
apps/web/components/post/: step-photos.tsx  step-review.tsx
apps/web/contexts/: auth-context.tsx
apps/web/lib/: api.ts  utils.ts
apps/web/types/: listing.ts  notification.ts  rating.ts
(+13 files in other folders)
